--- a/Assignment3/assignment3.html
+++ b/Assignment3/assignment3.html
@@ -16,19 +16,19 @@
     <div class="infobox">
       <h1>Something about Ragdoll Cats</h1>
       <div class="box">
-        <img src="images/mitsuclose.jpg" alt="">
+        <img src="images/mitsuclose.JPG" alt="">
         <a href="https://www.brightstonerags.com/"> Go to Brightstone Rags</a> <br>
         Something something big beautiful cats. <br>
         <button type="button" name="button">CAT</button>
       </div>
       <div class="box">
-        <img src="images/mitsuclose.jpg" alt="">
+        <img src="images/mitsuclose.JPG" alt="">
         <a href="https://www.brightstonerags.com/"> Go to Brightstone Rags</a> <br>
         Something something big beautiful cats. <br>
         <button type="button" name="button">CAT</button>
       </div>
       <div class="box">
-        <img src="images/mitsuclose.jpg" alt="">
+        <img src="images/mitsuclose.JPG" alt="">
         <a href="https://www.brightstonerags.com/"> Go to Brightstone Rags</a> <br>
         Something something big beautiful cats. <br>
         <button type="button" name="button">CAT</button>
