--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -37,8 +37,8 @@
 <!-- 2-by-1 -->
 
 <div class="twobyone">
-  <div class="imgbox"> <img src="images/intro_img2.jpg" alt="">
-    <div class="imgboxmsg"> lorem ipsum solor
+  <div class="imgbox">
+    <div class="imgboxmsg"> Unique blend containing antioxidants, Vitamin E and the ingredient Centella asiatica.
     </div>
   </div>
   <div class="imgboxtwo"> </div>
@@ -47,6 +47,10 @@
 
 <!--  3-by-1 -->
 
+<div class="bigbox">
+
+<h2>Lotions & Creams</h2>
+<div class="ruler"></div>
 <div class="threebyone">
   <div class="product">
     <img src="images/item1.png" alt="">
@@ -61,7 +65,7 @@
     <h5>THE RITUAL OF SAKURA</h5> Cherry Blossom Hand Lotion <h6> Body Lotion, 70ml</h6> $12.50  <br> <button type="button" name="button">Add to Cart</button>
   </div>
 </div>
-
+</div>
 <!--   FOOTER -->
 <div class="footer">
   <div class="footerbox"> <h5>HELP</h5>Customer Service <br> Live Chat</div>
