--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -30,7 +30,7 @@
 
 <div class="hero">
 <img src="images/intro_img2.jpg" alt="">
-  <div class="messagebox"> A 100% natural, unique dry oil that norishes the skin.
+  <div class="messagebox"> A 100% natural, unique dry oil that norishes the skin. Enrichedwith nourishing herbs, specifically put together according to the Aryvedic traditon for Vata Dosha. With nourishing sweet Almond Oil and basil.
   </div>
 </div>
 
@@ -38,10 +38,10 @@
 
 <div class="twobyone">
   <div class="imgbox">
-    <div class="imgboxmsg"> Unique blend containing antioxidants, Vitamin E and the ingredient Centella asiatica.
+    <div class="imgboxmsg"> <p>Unique blend containing antioxidants, Vitamin E and the ingredient Centella asiatica.</p>
     </div>
   </div>
-  <div class="imgboxtwo"> </div>
+  <div class="imgboxtwo">  <h4>Strengthen your Skin</h4> <p>Special technology makes this whipped cream easy to apply while its rich and velvety formulation nourishes the skin. <br><br> Enriched by nourishing rice milk and the flowery fragrance of cherry blossom</p></div>
 
 </div>
 
@@ -76,7 +76,7 @@
   <br><br><br>
   <div class="socialmediaL">
     <div class="socialmedia1"></div>
-    <div class="socialmedia2"><p>CONNECT WITH JOSEFINA BODYCARE CONNECTION </p> <img src="images/facebook.png" alt=""> <img src="images/instagram.png" alt=""> <img src="images/youtube.png" alt=""><img src="images/pinterest.png" alt=""><img src="images/twitter.png" alt="">
+    <div class="socialmedia2"><p>CONNECT WITH JOSEFINA BODYCARE CONNECTION </p>  <a href="http://www.facebook.com"> <img src="images/facebook.png" alt="" class="socialmediaimg"> </a> <a href="http://www.instagram.com"><img src="images/instagram.png" alt="" class="socialmediaimg"> </a> <a href="http://www.youtube.com"> <img src="images/youtube.png" alt="" class="socialmediaimg"></a> <a href="http://www.pinterest.com"><img src="images/pinterest.png" alt="" class="socialmediaimg"></a> <a href="http://www.twitter.com"><img src="images/twitter.png" alt="" class="socialmediaimg"></a>
     </div>
   </div>
 
