--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -54,7 +54,7 @@
 <div class="threebyone">
   <div class="product">
     <img src="images/item1.png" alt="">
-    <h5>THE RITUAL OF SAKURA</h5> Cherry Blossom Hand Lotion <h6> Body Lotion, 70ml</h6> $12.50  <br> <button type="button" name="button">Add to Cart</button>
+    <h5>THE RITUAL OF SAKURA</h5> <strong>Cherry Blossom Hand Lotion </strong><h6> Body Lotion, 70ml</h6> $12.50  <br> <button type="button" name="button">Add to Cart</button>
   </div>
   <div class="product">
     <img src="images/item2.png" alt="">
