--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -14,14 +14,11 @@
   <div class="titleu"><h3> Discover the exotic sensation of all seasons </h3></div>
 </div></div>
 <!--SLIDESHOW -->
-<div class="slideshowstage">
+<div class="stage">
   <div class="slidegroup">
-    <div class="slide">  hghfh  </div>
-    <div class="slide"> OH NO  </div>
-    <div class="slide">  OH YES</div>
-    <div class="slide"> hghfh
-
-    </div>
+    <div class="slide darkgreen">  Today only! <h4> $5.99 INTO THE NIGHT BODY CARE!</h4> Code: STARRY NIGHT </div>
+    <div class="slide"> Today only!  <h4> FREE SHIPPING ON MINIMUM $59USD</h4> </div>
+    <div class="slide darkgreen">  <h4>Visit our Ayuveda Collection!</h4></div>
     </div>
   </div>
 </div>
@@ -54,15 +51,15 @@
 <div class="threebyone">
   <div class="product">
     <img src="images/item1.png" alt="">
-    <h5>THE RITUAL OF SAKURA</h5> <strong>Cherry Blossom Hand Lotion </strong><h6> Body Lotion, 70ml</h6> $12.50  <br> <button type="button" name="button">Add to Cart</button>
+    <h5>THE RITUAL OF SAKURA</h5> <strong>Cherry Blossom Hand Lotion </strong><h6> Body Lotion, 70ml</h6> $12.50  <br> <a href="#Sakura"><button type="button" name="button" class="sbutton">Add to Cart</button></a>
   </div>
   <div class="product">
     <img src="images/item2.png" alt="">
-    <h5>THE RITUAL OF SAKURA</h5> Cherry Blossom Hand Lotion <h6> Body Lotion, 70ml</h6> $12.50  <br> <button type="button" name="button">Add to Cart</button>
+    <h5>THE RITUAL OF AYUVEDA</h5> <strong> Himalaya Honey Body Cream </strong> <h6> Body Lotion, 70ml</h6> $12.50  <br> <a href="#Ayuveda"><button type="button" name="button" class="sbutton">Add to Cart</button> </a>
   </div>
   <div class="product">
     <img src="images/item3.png" alt="">
-    <h5>THE RITUAL OF SAKURA</h5> Cherry Blossom Hand Lotion <h6> Body Lotion, 70ml</h6> $12.50  <br> <button type="button" name="button">Add to Cart</button>
+    <h5>THE RITUAL OF SAKURA</h5> <strong>Organic Rice Milk Body Cream </strong><h6> Body Lotion, 70ml</h6> $7.50  <br>  <a href="#Rice"><button type="button" name="button" class="sbutton">Add to Cart</button></a>
   </div>
 </div>
 </div>
@@ -76,7 +73,7 @@
   <br><br><br>
   <div class="socialmediaL">
     <div class="socialmedia1"></div>
-    <div class="socialmedia2"><p>CONNECT WITH JOSEFINA BODYCARE CONNECTION </p>  <a href="http://www.facebook.com"> <img src="images/facebook.png" alt="" class="socialmediaimg"> </a> <a href="http://www.instagram.com"><img src="images/instagram.png" alt="" class="socialmediaimg"> </a> <a href="http://www.youtube.com"> <img src="images/youtube.png" alt="" class="socialmediaimg"></a> <a href="http://www.pinterest.com"><img src="images/pinterest.png" alt="" class="socialmediaimg"></a> <a href="http://www.twitter.com"><img src="images/twitter.png" alt="" class="socialmediaimg"></a>
+    <div class="socialmedia2"><p>CONNECT WITH JOSEFINA BODYCARE CONNECTION </p>  <a href="http://www.facebook.com"> <img src="images/icons/facebook.png" alt="" class="socialmediaimg"> </a> <a href="http://www.instagram.com"><img src="images/icons/instagram.png" alt="" class="socialmediaimg"> </a> <a href="http://www.youtube.com"> <img src="images/icons/youtube.png" alt="" class="socialmediaimg"></a> <a href="http://www.pinterest.com"><img src="images/icons/pinterest.png" alt="" class="socialmediaimg"></a> <a href="http://www.twitter.com"><img src="images/icons/twitter.png" alt="" class="socialmediaimg"></a>
     </div>
   </div>
 
@@ -96,5 +93,47 @@
 <br>
 NOTE: This is a template to create a sales website. All informations and materials are used ONLY for educational purposes.
   </div>
+  <!-- Modal Window -->
+  <div id="Sakura" class="modal">
+  <div class="messageBlock">
+     <div class="row1">  <p> It's in the Bag!</p>  <div class="sm-break">  </div></div>
+     <div class="row12"> <a href="#"> X </a></div>
+     <div class="row2"> <img src="images/item1.png" alt=""> </div>
+     <div class="row22">  <h5> THE RITUAL OF SAKURA</h5> CHERRY BLOSSOM LOTION <h6> BODY LOTION 70ml</h6> $12.50 <p>Mix & Match 3/$12</p></div>
+     <div class="row3"> Nature and comfort from top to toe with Rituals of Sakura Body cream by Ritual.
+     <div class="sm-break2"> </div>
+  <a href="#Ayuveda"><button type="button" name="button">Continue Shopping</button></a>   </div>
+  </div>
+  </div>
+</div>
+
+<!-- Modal Window 2 -->
+
+<div id="Ayuveda" class="modal">
+<div class="messageBlock">
+   <div class="row1">  <p> It's in the Bag!</p>  <div class="sm-break">  </div></div>
+   <div class="row12"> <a href="#"> X </a></div>
+   <div class="row2"> <img src="images/item2.png" alt=""> </div>
+   <div class="row22">  <h5> THE RITUAL OF AYUVEDA</h5> HIMALAYA HONEY BODY CREAM<h6> BODY CREAM 70ml</h6> $12.50 <p>Mix & Match 3/$12</p></div>
+   <div class="row3"> Nature and comfort from top to toe with Rituals of Sakura Body cream by Ritual.
+   <div class="sm-break2"> </div>
+<a href="#Rice"><button type="button" name="button">Continue Shopping</button></a>   </div>
+</div>
+</div>
+</div>
+
+<!-- Modal Window 3-->
+<div id="Rice" class="modal">
+<div class="messageBlock">
+   <div class="row1">  <p> It's in the Bag!</p>  <div class="sm-break">  </div></div>
+   <div class="row12"> <a href="#"> X </a></div>
+   <div class="row2"> <img src="images/item3.png" alt=""> </div>
+   <div class="row22">  <h5> THE RITUAL OF SAKURA</h5> ORGANIC RICE MILK BODY CREAM <h6> BODY LOTION 70ml</h6> $12.50 <p>Mix & Match 3/$12</p></div>
+   <div class="row3"> Nature and comfort from top to toe with Rituals of Sakura Body cream by Ritual.
+   <div class="sm-break2"> </div>
+<a href="#"><button type="button" name="button">Continue Shopping</button></a>   </div>
+</div>
+</div>
+</div>
   </body>
 </html>
