--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -63,6 +63,28 @@
   </div>
 </div>
 </div>
+
+<!--  3-by-1 -->
+
+<div class="bigbox">
+
+<h2>GiftBoxes</h2>
+<div class="ruler"></div>
+<div class="threebyone">
+  <div class="product">
+    <img src="images/gift_set1.png" alt="">
+    <h5>STRAWBERRY GIFT SET</h5> <strong>Body cream, lotion, soap </strong><h6> Body Lotion, 70ml</h6> $12.50  <br> <a href="#gift1"><button type="button" name="button" class="sbutton">Add to Cart</button></a>
+  </div>
+  <div class="product">
+    <img src="images/gift_set2.png" alt="">
+    <h5>SAKURA GIFT SET</h5> <strong> Body cream, lotion, soap</strong> <h6> Body Lotion, 70ml</h6> $12.50  <br> <a href="#gift2"><button type="button" name="button" class="sbutton">Add to Cart</button> </a>
+  </div>
+  <div class="product">
+    <img src="images/gift_set3.png" alt="">
+    <h5>MINT GIFT SET</h5> <strong>Body cream, lotion, soap</strong><h6> Body Lotion, 70ml</h6> $7.50  <br>  <a href="#gift3"><button type="button" name="button" class="sbutton">Add to Cart</button></a>
+  </div>
+</div>
+</div>
 <!--   FOOTER -->
 <div class="footer">
   <div class="footerbox"> <h5>HELP</h5>Customer Service <br> Live Chat</div>
@@ -131,6 +153,49 @@ NOTE: This is a template to create a sales website. All informations and materia
    <div class="row22">  <h5> THE RITUAL OF SAKURA</h5> ORGANIC RICE MILK BODY CREAM <h6> BODY LOTION 70ml</h6> $12.50 <p>Mix & Match 3/$12</p></div>
    <div class="row3"> Nature and comfort from top to toe with Rituals of Sakura Body cream by Ritual.
    <div class="sm-break2"> </div>
+<a href="#"><button type="button" name="button">Continue Shopping</button></a>   </div>
+</div>
+</div>
+</div>
+
+<!-- Modal Window -->
+<div id="gift1" class="modal">
+<div class="messageBlock">
+   <div class="row1">  <p> It's in the Bag!</p>  <div class="sm-break">  </div></div>
+   <div class="row12"> <a href="#"> X </a></div>
+   <div class="row2"> <img src="images/gift_set1.png" alt=""> </div>
+   <div class="row22">  <h5> STRAWBERRY GIFT SET</h5> BODY CREAM, LOTION, SOAP <h6> BODY LOTION 70ml</h6> $12.50 <p>Mix & Match 3/$12</p></div>
+   <div class="row3"> Nature and comfort from top to toe with Rituals of Sakura Body cream by Ritual.
+   <div class="sm-break2"> </div>
+<a href="#gift2"><button type="button" name="button">Continue Shopping</button></a>   </div>
+</div>
+</div>
+</div>
+
+<!-- Modal Window 2 -->
+
+<div id="gift2" class="modal">
+<div class="messageBlock">
+ <div class="row1">  <p> It's in the Bag!</p>  <div class="sm-break">  </div></div>
+ <div class="row12"> <a href="#"> X </a></div>
+ <div class="row2"> <img src="images/gift_set2.png" alt=""> </div>
+ <div class="row22">  <h5> SAKURA GIFT SET</h5> BODY CREAM, LOTION, SOAP<h6> BODY CREAM 70ml</h6> $12.50 <p>Mix & Match 3/$12</p></div>
+ <div class="row3"> Nature and comfort from top to toe with Rituals of Sakura Body cream by Ritual.
+ <div class="sm-break2"> </div>
+<a href="#gift3"><button type="button" name="button">Continue Shopping</button></a>   </div>
+</div>
+</div>
+</div>
+
+<!-- Modal Window 3-->
+<div id="gift3" class="modal">
+<div class="messageBlock">
+ <div class="row1">  <p> It's in the Bag!</p>  <div class="sm-break">  </div></div>
+ <div class="row12"> <a href="#"> X </a></div>
+ <div class="row2"> <img src="images/gift_set3.png" alt=""> </div>
+ <div class="row22">  <h5> MINT GIFT SET</h5>BODY CREAM, LOTION SOAP <h6> BODY LOTION 70ml</h6> $12.50 <p>Mix & Match 3/$12</p></div>
+ <div class="row3"> Nature and comfort from top to toe with Rituals of Sakura Body cream by Ritual.
+ <div class="sm-break2"> </div>
 <a href="#"><button type="button" name="button">Continue Shopping</button></a>   </div>
 </div>
 </div>
